@@ -2,9 +2,14 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+01-Dec-2002
+~~~~~~~~~~~
+Added 'Edit Bookmarks' dialog and 'Show Bookmarks' menu entry.
+
 29-Nov-2002
 ~~~~~~~~~~~
 New mount icons (suggested by Marcin Juszkiewicz).
+Don't show separator in bookmarks menu when there is nothing below it.
 
 28-Nov-2002
 ~~~~~~~~~~~
@@ -112,7 +117,7 @@ Button-1 on Help shows the manual, other button opens the Help directory
 21-Oct-2002
 ~~~~~~~~~~~
 More checks to cope with invalid filenames (Marcin Juszkiewicz).
-Updated Polish translation (Marcin Juszkiew).
+Updated Polish translation (Marcin Juszkiewicz).
 
 19-Oct-2002
 ~~~~~~~~~~~
